Windows Scrollbar Fixed

--- a/HubUp/static/hubs/index.css
+++ b/HubUp/static/hubs/index.css
@@ -263,3 +263,23 @@ margin-left: -10px;
 .shift-left {
 	margin-right: 30px;
 }
+
+.DocumentList
+{
+    overflow-x:scroll;
+    overflow-y:hidden;
+    height:200px;
+    width:100%;
+    padding: 0 5px;
+}
+
+.DocumentItem
+{
+    border:1px solid black;
+    padding:0;
+    height:200px;
+}
+
+.list-inline {
+  white-space:nowrap;
+}
